sourceforge (2.6-0+9+) unstable; urgency=low

  * [Christian] Corrected wrong link in menu.php for lastlogin.php.
  * [Roland] Various other patches from Olafur Osvaldsson <oli@isnic.is>
    applied, many thanks.
  * [Roland] Changed about.php page so that it now speaks about Debian
    Sourceforge.

 -- Christian Bayle <bayle@debian.org>  Wed, 17 Apr 2002 00:27:54 +0200

sourceforge (2.6-0+9) unstable; urgency=low

  * [Christian] Added dependancy on rcs for our patched cvsweb
  * [Roland] Renamed db-upgrade26.pl to db-upgrade.pl.
  * [Roland] Split the parse_sql_file function out of db-upgrade.pl and
    into its own file (sqlparser.pm).
  * [Roland] Fixed configuration of apache-ssl.
  * [Roland] Worked to make the database scheme independent of the upgrade
    path: installing 2.6 over 2.5 now yields the same scheme as installing
    2.6 from scratch.  Well, actually, not quite, but the differences are
    only in a few constraints, and that'll be taken care of when we
    provide some way to backup and restore a database.
  * [Roland] db-upgrade.pl: replay the database "fixes" included in the
    2.5 packages before starting the conversion to 2.6, to permit upgrades
    from versions that are not the latest in the 2.5 series.
  * [Christian] gig2png conversion to make GNU happy.
  * [Christian] some html cleaning in Layout.class and osdn.php
  * [Christian] added Add, Delete, or Edit Themes in Site Utilities for admin
  * [Christian] change uid/gid attribution in ldap.php to be backend compliant
  * [Christian] added debian and savannah Themes
  * [Roland] Remove /cvsroot symlink on purge.
  * [Roland] Insert the appropriate rows in the database for themes.
  * [Roland] Added a "checkpoint" in db-upgrade.pl, so that we should now
    be able to provide upgrades between different releases in the 2.6
    series.
  * [Roland] Added a totally rewritten Korean language translation file
    provided by Soon-Son Kwon <kss@kldp.org>.  Many thanks to him.